--- a/TodoList/Backend/.env
+++ b/TodoList/Backend/.env
@@ -1,6 +1,7 @@
 JWT_KEY = priyaacharjeeandurshi;
-EXPRESS_SESSION_SECRET=PriyaSecureSession@2025
 
 CLOUDINARY_CLOUD_NAME= djnkfs3tx
 CLOUDINARY_API_KEY=811671965599737
 CLOUDINARY_API_SECRET=8rEXSVLctIzkcp3q9nM1Akp50x0
+
+MONGODB_URI = mongodb+srv://priyaacharjee2001_db_user:Priyadb123@cluster0.mhlqjwi.mongodb.net/?appName=Cluster0
